# python-discord-client

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  reuirements.txt  setup.py
.github/workflows/: ci.yaml
client/: client.py  ws_client.py
discoPy/: __version__.py  client.py  ws_client.py
discoPy/Utils/: Attachment.py  Embend.py  permissions.py
discoPy/application/: README.md  application.py
discoPy/base_request/: base_request.py
discoPy/channel/: README.md  channel.py
discoPy/core/: README.md  WSClient.py  base_client.py
discoPy/core/application/: application.py
discoPy/core/channel/: channel.py
discoPy/core/guild/: guild.py
discoPy/core/stage/: stage.py
discoPy/core/user/: user.py
discoPy/core/webhook/: webhook.py
discoPy/guild/: guild.py
discoPy/rest/: client.py  ws_client.py
discoPy/rest/application/: application.py
discoPy/rest/base_request/: base_request.py
discoPy/rest/channel/: channel.py
discoPy/rest/guild/: guild.py
discoPy/rest/stage/: stage.py
discoPy/rest/user/: README.md  user.py
discoPy/rest/webhook/: webhook.py
discoPy/stage/: README.md  stage.py
discoPy/user/: user.py
discoPy/utils/: attachments.py  embed.py  intents.py  permissions.py
discoPy/webhook/: README.md  webhook.py
discord/: DOC_GUILD.md  WSClient.py  __init__.py  application.py  base_request.py  channel.py  guild.py  stage.py  user.py  webhook.py
discord/utils/: __init__.py  attachments.py  embed.py  intents.py  permissions.py
examples/: .example.pythonenv  core.ws.test.py  core.wsclient.py  rest.endpoints.examples.py  rest_examples.py
python_discord_client/: __version__.py  client.py  ws_client.py
python_discord_client/base_request/: base_request.py
python_discord_client/channel/: channel.py
python_discord_client/guild/: guild.py
python_discord_client/user/: user.py
tests/: .example.pythonenv  guild.test.py  main.py
