[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord"
dynamic = ["version"]
authors = [
  { name="Benjamin Thomas Schwertfeger", email="contact@b-schwertfeger.de" },
]
description = "Tool that provides utilities to access the discord API using Python."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "asyncio",
    "aiohttp",
    "requests",
    "websockets",
]
keywords = ["discord", "media", "api"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]

[project.urls]
"Homepage" = "https://github.com/btschwertfeger/python-discord-client"
"Bug Tracker" = "https://github.com/btschwertfeger/python-discord-client/issues"

[project.optional-dependencies]
dev = [
  # building
  "build",
  "setuptools_scm",
  # formatting
  "black",
  # typing
  "mypy",
  "types-requests"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["discord*"]
exclude = ["docs*", "tests*", "examples*", ".env"]

[tool.setuptools_scm]
write_to = "discord/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# ========= T Y P I N G =======================================================
#
[tool.mypy]
python_version = "3.7"
# junit_xml = "mypy.xml"
files = ["discord/**/*.py"]
exclude = ["tests/*/*.py"]

# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

# # Untyped definitions and calls
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false

# None and Optional handling
implicit_optional = true
strict_optional = false

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Suppressinng errors
ignore_errors = false

# Configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
pretty = true
color_output = true
show_absolute_path = true
ignore_missing_imports = true
